<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MailPush</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Logotipo</string>
    <string name="Config">PREFERENCIAS</string>
    <string name="boton_camaras">boton para mirar las camaras</string>
    <string name="boton_mergandias">boton de emergandias</string>
    <string name="boton_configuraciones">boton de configuraciones</string>
    <string name="boton_salir">boton salir</string>
    <string name="boton_historial">boton historial</string>
    <string name="password_">PASSWORD:</string>
    <string name="email_">EMAIL:</string>
    <string name="subject">ASUNTO</string>
    <string name="from">DE:</string>
    <string name="vibracion">VIBRACION</string>
    <string name="alarma">ALARMA</string>
    <string name="atras">GUARDAR</string>
    <string name="menu">MENU</string>
    <string name="iniciar">INICIAR</string>
    <string name="copy">© 2014 Powered by Mobilsoft SAS </string>

</resources>