<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="10dp">
    
    <ImageView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/truvision_logo" 
        android:contentDescription="@string/logo"/>
    
    <EditText 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_"
        android:id="@+id/user"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_select"
        android:textSize="25sp"/>
    
    <EditText 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_"
        android:id="@+id/password"
        android:layout_marginTop="10dp" 
        android:inputType="textPassword"
        android:background="@drawable/edittext_select"
        android:textSize="25sp"/>
    
    <EditText 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        android:id="@+id/asunto"
        android:layout_marginTop="10dp" 
        android:inputType="text"
        android:background="@drawable/edittext_select"
        android:textSize="25sp"/>
    
    <CheckBox 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:text="@string/vibracion"
        android:checked="false"
        android:layout_marginTop="10dp"
        android:id="@+id/vir"/>
    
    <CheckBox 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarma"
        android:checked="false"
        android:layout_marginTop="10dp"
        android:id="@+id/sou"/>
    
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/mensaje"/>
    
    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atras"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:id="@+id/atras"
        android:focusableInTouchMode="true"/>
    

</LinearLayout>
